--- a/MujahidHtmlEmailHelper/MujahidHtmlEmailHelper.csproj
+++ b/MujahidHtmlEmailHelper/MujahidHtmlEmailHelper.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>mujahidalimultani</Authors>
   </PropertyGroup>
 
   <ItemGroup>
